packages/lumx-core/src/scss/components/user-block/_index.scss
@use "sass:math";

/* ==========================================================================
   User block
   ========================================================================== */

.#{$lumx-base-prefix}-user-block {
    $self: &;

    display: flex;
    align-items: center;

    &--orientation-vertical {
        flex-direction: column;
    }

    &--orientation-horizontal {
        #{$self}__after {
            margin: 0 0 0 $lumx-spacing-unit-big;
        }
    }

    &__avatar {
        #{$self}--orientation-horizontal#{$self}--size-xs & {
            margin-right: $lumx-spacing-unit;
        }

        #{$self}--orientation-horizontal#{$self}--size-s & {
            margin-right: $lumx-spacing-unit;
        }

        #{$self}--orientation-horizontal#{$self}--size-m &,
        #{$self}--orientation-horizontal#{$self}--size-l & {
            margin-right: $lumx-spacing-unit * 2;
        }

        #{$self}--orientation-vertical & {
            margin-bottom: $lumx-spacing-unit * 1.5;
        }
    }

    &__wrapper {
        display: flex;
        flex-direction: column;

        #{$self}--orientation-vertical & {
            align-items: center;
        }
    }

    &__name {
        width: fit-content;
        outline: none;

        #{$self}--size-xs & {
            @include lumx-typography("body1");
        }


        @include lumx-typography("subtitle1");

        #{$self}--orientation-vertical & {
            text-align: center;
        }

        #{$self}--theme-dark & {
            color: lumx-color-variant("light", "N");
        }
    }

    &__fields {
        #{$self}--size-s & {
            display: none;
        }

        #{$self}--size-m & {
            display: flex;
        }

        #{$self}--size-l & {
            display: flex;
            flex-direction: column;
        }

        #{$self}--orientation-vertical & {
            align-items: center;
        }
    }

    &__field {
        @include lumx-typography("body1");

        #{$self}--size-m & {
            &::after {
                margin: 0 math.div($lumx-spacing-unit, 2);
                content: "•";
            }

            &:last-child::after {
                display: none;
            }
        }

        #{$self}--orientation-vertical & {
            text-align: center;
        }

        #{$self}--theme-light & {
            color: lumx-color-variant("dark", "L2");
        }

        #{$self}--theme-dark & {
            color: lumx-color-variant("light", "L2");
        }
    }

    &__action,
    &__actions,
    &__after  {
        margin-top: $lumx-spacing-unit * 2;
    }
}

